--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,17 +41,17 @@ jobs:
       - name: List coverage files
         run: ls '${{ github.workspace }}/coverage/'
 
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
-        with:
-          args: >
-            -Dsonar.organization=managedcode
-            -Dsonar.projectKey=managedcode_IntegrationTestBaseKit
-            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
-            -Dsonar.cs.opencover.reportsPaths=${{ github.workspace }}/coverage/
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#      - name: SonarCloud Scan
+#        uses: sonarsource/sonarcloud-github-action@master
+#        with:
+#          args: >
+#            -Dsonar.organization=managedcode
+#            -Dsonar.projectKey=managedcode_IntegrationTestBaseKit
+#            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+#            -Dsonar.cs.opencover.reportsPaths=${{ github.workspace }}/coverage/
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: NDepend
         uses: ndepend/ndepend-action@v1
