--- a/ManagedCode.IntegrationTestBaseKit/ManagedCode.IntegrationTestBaseKit.csproj
+++ b/ManagedCode.IntegrationTestBaseKit/ManagedCode.IntegrationTestBaseKit.csproj
@@ -4,15 +4,21 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-
         <IsPackable>true</IsPackable>
-        <IsTestProject>true</IsTestProject>
+    </PropertyGroup>
+
+    <!--NuGet-->
+    <PropertyGroup>
+        <Title>ManagedCode.ManagedCode.IntegrationTestBaseKit</Title>
+        <PackageId>ManagedCode.ManagedCode.IntegrationTestBaseKit</PackageId>
+        <Description>Extensions for ASP.NET for managing Docker containers in integration tests.</Description>
+        <PackageTags>managedcode, docker, integration testing, asp.net, containers, testcontainers, csharp</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8"/>
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.8"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0"/>
         <PackageReference Include="Microsoft.Playwright" Version="1.46.0"/>
         <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.11.0"/>
         <PackageReference Include="Testcontainers" Version="3.9.0"/>
