--- a/ManagedCode.IntegrationTestBaseKit/ManagedCode.IntegrationTestBaseKit.csproj
+++ b/ManagedCode.IntegrationTestBaseKit/ManagedCode.IntegrationTestBaseKit.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>true</IsPackable>
+        <IsTestProject>false</IsTestProject>
     </PropertyGroup>
 
     <!--NuGet-->
