--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -16,7 +16,13 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
-
+          
+      - uses: actions/setup-node@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Install playwright browsers
+        run: npx playwright install --with-deps
+        
       - name: Restore dependencies
         run: dotnet restore
 
